--- a/css/style.css
+++ b/css/style.css
@@ -170,13 +170,10 @@ body {
     /* background: blue; */
     grid-area: colum__1;
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 1fr 1.3fr;
     grid-template-areas:
-        "carusel__colum__1 table__colum__1"
-        "information__colum__1 information__colum__1";
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
+        "carusel__colum__1"
+        "table__colum__1";
 }
 
 .section__information__2 div:first-child {
@@ -188,14 +185,6 @@ body {
     justify-content: space-evenly;
 }
 
-.section__information__2 .information__table {
-    grid-area: information__colum__1;
-    display: flex;
-    overflow-x: auto;
-    justify-content: center;
-    align-items: center;
-}
-
 .section__information__2 div:first-child>.carousel__item {
     /* flex: 1; */
     min-width: 48%;
@@ -205,11 +194,40 @@ body {
     align-items: center;
 }
 
-.section__information__2 div:last-child {
+.information__table__1 {
+    width: 85%;
+    margin: 10px auto;
     /* background: darkblue; */
     grid-area: table__colum__1;
 }
-
+.information__table__1 h3{
+    text-transform: uppercase;
+    padding: 0 25px;
+    margin-bottom: 5px;
+    color: var(--color--two);
+}
+.information__table__1 hr{
+    margin: 0 auto;
+    width: 90%;
+    border-color: var(--color--two);
+}
+.table__container__1{
+    /* background: orange; */
+    height: 160px;
+    overflow-y: auto;
+    padding: 0 25px;
+}
+.table__container__1 div{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between !important;
+}
+.table__container__1 div span{
+    color: var(--color--two);
+}
+.table__container__1 div strong{
+    color: var(--color--five);
+}
 .section__image {
     /* background: orange; */
     grid-area: colum__2;
@@ -226,7 +244,7 @@ body {
 }
 
 .section__image>.carousel__item img {
-    width: 360px;
+    width: 305px;
     height: 190px;
     border-radius: 10px;
     object-fit: cover;
@@ -239,10 +257,8 @@ body {
     display: grid;
     grid-template-rows: 1fr 1.3fr;
     grid-template-areas:
-        "carusel__colum__2 table__colum__2";
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
+        "carusel__colum__2"
+        "table__colum__2";
 }
 
 .section__information__3 div:first-child {
@@ -262,10 +278,39 @@ body {
     justify-content: center;
     align-items: center;
 }
-
-.section__information__3 div:last-child {
+.information__table__2 {
+    width: 85%;
+    margin: 10px auto;
     /* background: darkblue; */
     grid-area: table__colum__2;
+}
+.information__table__2 h3{
+    text-transform: uppercase;
+    padding: 0 25px;
+    margin-bottom: 5px;
+    color: var(--color--two);
+}
+.information__table__2 hr{
+    margin: 0 auto;
+    width: 90%;
+    border-color: var(--color--two);
+}
+.table__container__2{
+    /* background: orange; */
+    height: 160px;
+    overflow-y: auto;
+    padding: 0 25px;
+}
+.table__container__2 div{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between !important;
+}
+.table__container__2 div span{
+    color: var(--color--two);
+}
+.table__container__2 div strong{
+    color: var(--color--five);
 }
 
 .footer {
@@ -278,12 +323,38 @@ body {
 
 .footer ul {
     grid-area: footer__menu;
-    /* background: violet; */
+    background: var(--color--one);
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
 }
-
+.footer ul::after{
+    content: "";
+    position: relative;
+    margin-top: 10px;
+    right: -47.5px;
+    bottom: 0;
+    width: 0;
+    height: 18px;
+    border-left: 0px solid transparent;
+    border-right: 48px solid transparent;
+    border-bottom: 70px solid var(--color--one);
+}
+.footer ul::before{
+    content: "";
+    position: relative;
+    margin-top: 1px;
+    left: -47px;
+    bottom: 0;
+    width: 0;
+    height: 27px;
+    border-left: 48px solid transparent;
+    border-right: 0px solid transparent;
+    border-bottom: 70px solid  var(--color--one);
+    /* border-top-right-radius: 30px; */
+}
 .footer ul li {
     list-style: none;
 }
@@ -292,8 +363,14 @@ body {
     text-decoration: none;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    color: var(--color--two);
 }
 
+.select{
+    padding: 8px 0;
+    border-bottom: 4px solid var(--color--five) ;
+}
 .nav__information {
     /* background: red; */
     grid-area: nav__2;
